# shim-getpw

./: .gitignore  CMakeLists.txt  LICENSE  default.nix  package.nix  readme.md  shell.nix
src/: getpw.c
tests/: runner.sh  test-id.c  test-string.c
